--- a/Omnifood/resources/css/queries.css
+++ b/Omnifood/resources/css/queries.css
@@ -55,6 +55,40 @@
     }
     .main-nav { display: none; }
 
+    .mobile-nav-icon {display: inline-block;}
+
+    .main-nav {
+        float: left;
+        margin-top: 25px;
+        margin-left: 25px;
+    }
+
+    .main-nav li {
+        display: block;
+    }
+
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 5px 0;
+    }
+
+    .main-nav { margin-top: 10px; }
+
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited {
+        padding: 16px 0;
+    }
+
+    .sticky .mobile-nav-icon {
+        margin-top: 10px;
+    }
+
+    .sticky .mobile-nav-icon ion-icon {
+        color: #555;
+    }
+
     h1 { font-size: 180%; }
     h2 { font-size: 150%; }
 
