--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -205,12 +205,21 @@ header {
 }
 
 .logo {
-    height: auto;
-    width: 100px;
+    height: 100px;
+    width: auto;
     float: left;
     margin-top: 20px;
 }
 
+.logo-black {
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
+
+/*main navi*/
 .main-nav {
     float: right;
     list-style: none;
@@ -231,7 +240,6 @@ header {
     font-size: 90%;
     border-bottom: 2px solid transparent;
     transition: border-bottom 0.2s;
-
 }
 
 .main-nav li a:hover,
@@ -239,6 +247,42 @@ header {
     border-bottom: 2px solid #e67e22;
     padding: 8px 0;
 }
+
+/* Mobile navi */
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon ion-icon {
+    font-size: 200%;
+    color: #fff;
+}
+
+/*sticky navi*/
+
+.sticky {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 2px 2px #efefef;
+}
+
+.main-nav { margin-top: 18px; }
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 16px 0;
+    color: #555;
+}
+
+.sticky .logo {display: none;}
+.sticky .logo-black { display: block; }
 
 /*----------------------------------------*/
 /* FEATURES */
@@ -567,5 +611,31 @@ footer p {
 .instagram:hover {
     color: #517fa4;
 }
+
+/* ----------------------------------------------- */
+/* Animations */
+/* ----------------------------------------------- */
+
+.js--wp-1,
+.js--wp-2,
+.js--wp-3
+{
+    opacity: 0;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.js--wp-4 {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated {
+    opacity: 1;
+}
+
+
 
 
